# AP_homework2

./: CMakeLists.txt  Makefile  README.md  build.sh  csvparser.cpp  csvparser.hpp  main  main.cpp  media_mediana_varianza.cpp  projbuild.sh  shared library  testbuild.sh
apps/: CMakeLists.txt  main.cpp  maincsv.cpp  mainode.cpp
cmake/boost_1_83_0/: project-config.jam
csv_examples/: house.csv  prove.csv  top_english_movies.csv
extlib/boost_1_83_0/bin.v2/: project-cache.jam
src/: .odesolver.cpp.swp  CMakeLists.txt  ODESolver.cpp  ODESolver.hpp  ODESolver_unico.cpp  csvparser.cpp  csvparser.hpp  main.cpp  media_mediana_varianza.cpp  ode.cpp  ode.hpp  odesolver.cpp  odesolver.hpp
src/csvparser/: CMakeCache.txt  Makefile  cmake_install.cmake
src/odesolver/: CMakeCache.txt  Makefile  cmake_install.cmake
